fix: remove cursor pointer for non desktop layouts

--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -60,7 +60,6 @@ section {
 label {
   display: block;
   width: 100%;
-  cursor: pointer;
 }
 
 img {
@@ -156,6 +155,10 @@ input:checked ~ label h2 {
 
   main:hover .label-heading_status {
     opacity: 1;
+  }
+
+  label {
+    cursor: pointer;
   }
 
 }
